2008-06-13  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Table of listener modules converted to
	description. Table of modules overview simplified, and module
	names link to their sections. Document
	ldap_local_filter (EJAB-179)

	* doc/guide.html: Regenerated with all the latest changes

2008-06-12  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Permanent reference URL for sections (EJAB-651).
	Changes in CSS: verbatim text is indented and has grey background;
	descriptions are indented; table borders are softer. Fix
	indentation of verbatim text.

2008-06-10  Badlop  <badlop@process-one.net>

	* src/ejabberd_c2s.erl: Bugfix: deliver messages when first
	presence is Invisible (thanks to Dariusz Markowicz)(EJAB-262)

2008-06-08  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Small fixes (thanks to Christoph Anton Mitterer)
	* doc/introduction.tex: Likewise
	* doc/guide.html: Likewise

2008-06-05  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document ejabberdctl status code (EJAB-633)
	* doc/guide.html: Likewise

2008-06-04  Badlop  <badlop@process-one.net>

	* src/msgs/pl.msg: Bugfix in arguments of translated string that
	could crash the room (thanks to Anastasia Gornostaeva)

2008-05-31  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web.erl (make_xhtml/2): Allow to include
	elements in the HTTP header

	* src/odbc/odbc_queries.erl (del_user_return_password): Return
	password (thanks to Oleg Palij)

2008-05-22  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s.erl: Added s2s_send_packet and s2s_receive_packet
	hooks (EJAB-635).
	* src/ejabberd_s2s_in.erl: Likewise.

	* src/ejabberd_c2s.erl: user_send_packet hook now called on all packets
	including presence packets (EJAB-634)

2008-05-22  Badlop  <badlop@process-one.net>

	* README: R12 support: remove compilation warning (EJAB-630)

2008-05-19  Badlop  <badlop@process-one.net>

	* doc/guide.html: Update

	* src/configure.ac: R12 support: remove compilation